# Render-Engine

./: .gitignore  CMakeLists.txt  camera.hpp  constants.hpp  debug_ui.hpp  event_system.hpp  framebuffer.hpp  main.cpp  mesh.hpp  scene_descriptor.hpp  scene_node.hpp  shader.hpp
shaders/: fragmentShader.glsl  vertexShader.glsl
shaders/debug2D/: vertex.glsl
shaders/main/: fragment.glsl  vertex.glsl
shaders/quad/: fragment.glsl  vertex.glsl
